2005-02-02 09:25 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (REQUIRED_IMPROVEMENT) made the value very small,
	1.0e-12, so that the maximum possible swaps are allowed. The more
	swaps that take place the better that the edge based scheme does.

2005-02-01 22:35 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (REQUIRED_IMPROVEMENT) added a #define to require
	this minimum improvement to accept swap.

2005-02-01 22:20 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptBasedOnConnRankings) When a new node
	is added by spliting it is positioned to be the correct distance
	from the node with the smallest edge length requirement.

2005-02-01 18:10 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridSwapEdge) does not abort swap if mean ratio
	goes down when gridCostFunction is gridCOST_FCN_EDGE_LENGTH (put
	back it)

2005-02-01 17:55 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridCollapseCost) added logic to set the
	boundary face and edge parameters while evaluating new
	configurations. NOTE: Disabled Unit Test!!!

2005-02-01 16:11 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridEdgeRatio) to better estimate the length
	of an edge in mapped space with a linearly varying metric the
	matric is averaged instead of the edge lengths computed at each
	node.

2005-02-01 14:33 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridwritetecplotsurfacezone_) the logic that
	chooses which cells are bad and need to be written now uses gridAR
	to be consistant with all other contraint tests.

2005-02-01  9:18 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridSwapEdge) added local processor checks to
	the two faces that are required to be added to test validity
	durring swap evaluations. Swap will abort if niether face belongs
	to other processor.

2005-01-31 11:40 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.6 Release. ** internal release ** the om6 test case is
	working.

2005-01-31 22:10 Mike Park  <mike.park@nasa.gov>
