@@ -283,16 +283,10 @@ VALUE grid_nodeARDerivative( VALUE self, VALUE node )
   return rb_ar;
 }
 
-VALUE grid_storeARDerivative( VALUE self, VALUE node )
+VALUE grid_storeAllARDerivatives( VALUE self, VALUE node )
 {
   GET_GRID_FROM_SELF;
-  return (grid == gridStoreARDerivative( grid, NUM2INT(node) )?self:Qnil);
-}
-
-VALUE grid_storedARDegree( VALUE self )
-{
-  GET_GRID_FROM_SELF;
-  return INT2NUM(gridStoredARDegree( grid ));
+  return (grid == gridStoreAllARDerivatives( grid, NUM2INT(node) )?self:Qnil);
 }
 
 VALUE grid_minVolume( VALUE self )
@@ -500,8 +494,8 @@ void Init_GridMetric()
   rb_define_method( cGridMetric, "cellARDerivative", grid_cellARDerivative, 1 );
   rb_define_method( cGridMetric, "cellRatioErrorDerivative", grid_cellRatioErrorDerivative, 1 );
   rb_define_method( cGridMetric, "nodeARDerivative", grid_nodeARDerivative, 1 );
-  rb_define_method( cGridMetric, "storeARDerivative", grid_storeARDerivative, 1 );
-  rb_define_method( cGridMetric, "storedARDegree", grid_storedARDegree, 0 );
+  rb_define_method( cGridMetric, "storeAllARDerivatives",
+		    grid_storeAllARDerivatives, 1 );
   rb_define_method( cGridMetric, "minVolume", grid_minVolume, 0 );
   rb_define_method( cGridMetric, "minAR", grid_minAR, 0 );
 
